libqt6c/src/libqtextformat.hpp

typedef struct QBrush QBrush;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextImageFormat QTextImageFormat;
typedef struct QTextLength QTextLength;
typedef struct QTextListFormat QTextListFormat;
typedef struct QTextTableCellFormat QTextTableCellFormat;
typedef struct QTextTableFormat QTextTableFormat;
int QTextFormat_ObjectType(const QTextFormat* self);
bool QTextFormat_IsCharFormat(const QTextFormat* self);
bool QTextFormat_IsBlockFormat(const QTextFormat* self);
bool QTextFormat_IsListFormat(const QTextFormat* self);
bool QTextFormat_IsFrameFormat(const QTextFormat* self);
bool QTextFormat_IsImageFormat(const QTextFormat* self);
bool QTextFormat_IsTableFormat(const QTextFormat* self);
bool QTextFormat_IsTableCellFormat(const QTextFormat* self);
QTextBlockFormat* QTextFormat_ToBlockFormat(const QTextFormat* self);
QTextCharFormat* QTextFormat_ToCharFormat(const QTextFormat* self);
QTextListFormat* QTextFormat_ToListFormat(const QTextFormat* self);
QTextTableFormat* QTextFormat_ToTableFormat(const QTextFormat* self);
QTextFrameFormat* QTextFormat_ToFrameFormat(const QTextFormat* self);
QTextImageFormat* QTextFormat_ToImageFormat(const QTextFormat* self);
QTextTableCellFormat* QTextFormat_ToTableCellFormat(const QTextFormat* self);
void QTextFormat_SetLayoutDirection(QTextFormat* self, int direction);
int QTextFormat_LayoutDirection(const QTextFormat* self);
void QTextFormat_SetBackground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Background(const QTextFormat* self);
void QTextFormat_ClearBackground(QTextFormat* self);
void QTextFormat_SetForeground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Foreground(const QTextFormat* self);
void QTextFormat_ClearForeground(QTextFormat* self);
QTextFrameFormat* QTextFrameFormat_new();
QTextFrameFormat* QTextFrameFormat_new2(const QTextFrameFormat* param1);
bool QTextFrameFormat_IsValid(const QTextFrameFormat* self);
void QTextFrameFormat_SetPosition(QTextFrameFormat* self, int f);
int QTextFrameFormat_Position(const QTextFrameFormat* self);
void QTextFrameFormat_SetBorder(QTextFrameFormat* self, double border);
double QTextFrameFormat_Border(const QTextFrameFormat* self);
void QTextFrameFormat_SetBorderBrush(QTextFrameFormat* self, const QBrush* brush);
QBrush* QTextFrameFormat_BorderBrush(const QTextFrameFormat* self);
void QTextFrameFormat_SetBorderStyle(QTextFrameFormat* self, int style);
int QTextFrameFormat_BorderStyle(const QTextFrameFormat* self);
void QTextFrameFormat_SetMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_Margin(const QTextFrameFormat* self);
void QTextFrameFormat_SetTopMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_TopMargin(const QTextFrameFormat* self);
void QTextFrameFormat_SetBottomMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_BottomMargin(const QTextFrameFormat* self);
void QTextFrameFormat_SetLeftMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_LeftMargin(const QTextFrameFormat* self);
void QTextFrameFormat_SetRightMargin(QTextFrameFormat* self, double margin);
double QTextFrameFormat_RightMargin(const QTextFrameFormat* self);
void QTextFrameFormat_SetPadding(QTextFrameFormat* self, double padding);
double QTextFrameFormat_Padding(const QTextFrameFormat* self);
void QTextFrameFormat_SetWidth(QTextFrameFormat* self, double width);
void QTextFrameFormat_SetWidth2(QTextFrameFormat* self, const QTextLength* length);
QTextLength* QTextFrameFormat_Width(const QTextFrameFormat* self);
void QTextFrameFormat_SetHeight(QTextFrameFormat* self, double height);
void QTextFrameFormat_SetHeight2(QTextFrameFormat* self, const QTextLength* height);
QTextLength* QTextFrameFormat_Height(const QTextFrameFormat* self);
void QTextFrameFormat_SetPageBreakPolicy(QTextFrameFormat* self, int flags);
int QTextFrameFormat_PageBreakPolicy(const QTextFrameFormat* self);
void QTextFrameFormat_Delete(QTextFrameFormat* self);