QtBeef/src/Qt/qtextformat.bf

	public c_int ObjectType()
	{
		return CQt.QTextFormat_ObjectType((.)this.ptr.Ptr);
	}
	public bool IsCharFormat()
	{
		return CQt.QTextFormat_IsCharFormat((.)this.ptr.Ptr);
	}
	public bool IsBlockFormat()
	{
		return CQt.QTextFormat_IsBlockFormat((.)this.ptr.Ptr);
	}
	public bool IsListFormat()
	{
		return CQt.QTextFormat_IsListFormat((.)this.ptr.Ptr);
	}
	public bool IsFrameFormat()
	{
		return CQt.QTextFormat_IsFrameFormat((.)this.ptr.Ptr);
	}
	public bool IsImageFormat()
	{
		return CQt.QTextFormat_IsImageFormat((.)this.ptr.Ptr);
	}
	public bool IsTableFormat()
	{
		return CQt.QTextFormat_IsTableFormat((.)this.ptr.Ptr);
	}
	public bool IsTableCellFormat()
	{
		return CQt.QTextFormat_IsTableCellFormat((.)this.ptr.Ptr);
	}
	public QTextBlockFormat_Ptr ToBlockFormat()
	{
		return QTextBlockFormat_Ptr(CQt.QTextFormat_ToBlockFormat((.)this.ptr.Ptr));
	}
	public QTextCharFormat_Ptr ToCharFormat()
	{
		return QTextCharFormat_Ptr(CQt.QTextFormat_ToCharFormat((.)this.ptr.Ptr));
	}
	public QTextListFormat_Ptr ToListFormat()
	{
		return QTextListFormat_Ptr(CQt.QTextFormat_ToListFormat((.)this.ptr.Ptr));
	}
	public QTextTableFormat_Ptr ToTableFormat()
	{
		return QTextTableFormat_Ptr(CQt.QTextFormat_ToTableFormat((.)this.ptr.Ptr));
	}
	public QTextFrameFormat_Ptr ToFrameFormat()
	{
		return QTextFrameFormat_Ptr(CQt.QTextFormat_ToFrameFormat((.)this.ptr.Ptr));
	}
	public QTextImageFormat_Ptr ToImageFormat()
	{
		return QTextImageFormat_Ptr(CQt.QTextFormat_ToImageFormat((.)this.ptr.Ptr));
	}
	public QTextTableCellFormat_Ptr ToTableCellFormat()
	{
		return QTextTableCellFormat_Ptr(CQt.QTextFormat_ToTableCellFormat((.)this.ptr.Ptr));
	}
	public void SetLayoutDirection(Qt_LayoutDirection direction)
	{
		CQt.QTextFormat_SetLayoutDirection((.)this.ptr.Ptr, direction);
	}
	public Qt_LayoutDirection LayoutDirection()
	{
		return CQt.QTextFormat_LayoutDirection((.)this.ptr.Ptr);
	}
	public void SetBackground(IQBrush brush)
	{
		CQt.QTextFormat_SetBackground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Background()
	{
		return QBrush_Ptr(CQt.QTextFormat_Background((.)this.ptr.Ptr));
	}
	public void ClearBackground()
	{
		CQt.QTextFormat_ClearBackground((.)this.ptr.Ptr);
	}
	public void SetForeground(IQBrush brush)
	{
		CQt.QTextFormat_SetForeground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Foreground()
	{
		return QBrush_Ptr(CQt.QTextFormat_Foreground((.)this.ptr.Ptr));
	}
	public void ClearForeground()
	{
		CQt.QTextFormat_ClearForeground((.)this.ptr.Ptr);
	}
}
interface IQTextImageFormat : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextFrameFormat
// --------------------------------------------------------------
[CRepr]
struct QTextFrameFormat_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextFrameFormat_new")]
	public static extern QTextFrameFormat_Ptr QTextFrameFormat_new();
	[LinkName("QTextFrameFormat_new2")]
	public static extern QTextFrameFormat_Ptr QTextFrameFormat_new2(void** param1);
	[LinkName("QTextFrameFormat_Delete")]
	public static extern void QTextFrameFormat_Delete(QTextFrameFormat_Ptr self);
	[LinkName("QTextFrameFormat_IsValid")]
	public static extern bool QTextFrameFormat_IsValid(void* self);
	[LinkName("QTextFrameFormat_SetPosition")]
	public static extern void QTextFrameFormat_SetPosition(void* self, QTextFrameFormat_Position f);
	[LinkName("QTextFrameFormat_Position")]
	public static extern QTextFrameFormat_Position QTextFrameFormat_Position(void* self);
	[LinkName("QTextFrameFormat_SetBorder")]
	public static extern void QTextFrameFormat_SetBorder(void* self, double border);
	[LinkName("QTextFrameFormat_Border")]
	public static extern double QTextFrameFormat_Border(void* self);
	[LinkName("QTextFrameFormat_SetBorderBrush")]
	public static extern void QTextFrameFormat_SetBorderBrush(void* self, void** brush);
	[LinkName("QTextFrameFormat_BorderBrush")]
	public static extern void* QTextFrameFormat_BorderBrush(void* self);
	[LinkName("QTextFrameFormat_SetBorderStyle")]
	public static extern void QTextFrameFormat_SetBorderStyle(void* self, QTextFrameFormat_BorderStyle style);
	[LinkName("QTextFrameFormat_BorderStyle")]
	public static extern QTextFrameFormat_BorderStyle QTextFrameFormat_BorderStyle(void* self);
	[LinkName("QTextFrameFormat_SetMargin")]
	public static extern void QTextFrameFormat_SetMargin(void* self, double margin);
	[LinkName("QTextFrameFormat_Margin")]
	public static extern double QTextFrameFormat_Margin(void* self);
	[LinkName("QTextFrameFormat_SetTopMargin")]
	public static extern void QTextFrameFormat_SetTopMargin(void* self, double margin);
	[LinkName("QTextFrameFormat_TopMargin")]
	public static extern double QTextFrameFormat_TopMargin(void* self);
	[LinkName("QTextFrameFormat_SetBottomMargin")]
	public static extern void QTextFrameFormat_SetBottomMargin(void* self, double margin);
	[LinkName("QTextFrameFormat_BottomMargin")]
	public static extern double QTextFrameFormat_BottomMargin(void* self);
	[LinkName("QTextFrameFormat_SetLeftMargin")]
	public static extern void QTextFrameFormat_SetLeftMargin(void* self, double margin);
	[LinkName("QTextFrameFormat_LeftMargin")]
	public static extern double QTextFrameFormat_LeftMargin(void* self);
	[LinkName("QTextFrameFormat_SetRightMargin")]
	public static extern void QTextFrameFormat_SetRightMargin(void* self, double margin);
	[LinkName("QTextFrameFormat_RightMargin")]
	public static extern double QTextFrameFormat_RightMargin(void* self);
	[LinkName("QTextFrameFormat_SetPadding")]
	public static extern void QTextFrameFormat_SetPadding(void* self, double padding);
	[LinkName("QTextFrameFormat_Padding")]
	public static extern double QTextFrameFormat_Padding(void* self);
	[LinkName("QTextFrameFormat_SetWidth")]
	public static extern void QTextFrameFormat_SetWidth(void* self, double width);
	[LinkName("QTextFrameFormat_SetWidth2")]
	public static extern void QTextFrameFormat_SetWidth2(void* self, void** length);
	[LinkName("QTextFrameFormat_Width")]
	public static extern void* QTextFrameFormat_Width(void* self);
	[LinkName("QTextFrameFormat_SetHeight")]
	public static extern void QTextFrameFormat_SetHeight(void* self, double height);
	[LinkName("QTextFrameFormat_SetHeight2")]
	public static extern void QTextFrameFormat_SetHeight2(void* self, void** height);
	[LinkName("QTextFrameFormat_Height")]
	public static extern void* QTextFrameFormat_Height(void* self);
	[LinkName("QTextFrameFormat_SetPageBreakPolicy")]
	public static extern void QTextFrameFormat_SetPageBreakPolicy(void* self, void* flags);
	[LinkName("QTextFrameFormat_PageBreakPolicy")]
	public static extern void* QTextFrameFormat_PageBreakPolicy(void* self);
}
